packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/valid/pressure_commands.mmd
---
title: "Pressure Commands"
---

[00:00.000]
- channel_pressure 1.64
- cp 1.80
- poly_pressure 1.60.100
- pp 1.C4.127
